--- a/index.html
+++ b/index.html
@@ -65,6 +65,47 @@
                 <img src="image/bg.jpg" alt="Background image">
             </div>
         </section>
+
+        <section class="hiw">
+            <div class="container">
+                <div class="hiw-header">
+                    <div class="hiw-header-head">
+                        <h2 class="hiw-header-title">
+                            How it works
+                        </h2>
+                        <h3 class="hiw-header-subtitle">
+                            Understand & Release the stress in 3 steps
+                        </h3>
+                    </div>
+                    <div class="hiw-header-content">
+                        <p>
+                            Alivio offers as many journals it takes, tackling different areas such as anxiety, 
+                            overwhelmedness, sadness, or anger, and a variety of personal causes, 
+                            to help you become aware of your emotions, and guide you in how to manage stress.
+                        </p>
+                    </div>
+                </div>
+                
+                <div class="hiw-steps">
+                    <div class="step">
+                         <h3 class="step-heading" data-number="01">
+                            Personalize
+                         </h3>
+                         <div class="step-text">
+                             <p>
+                                Answer a quick survey about how you express yourself, 
+                                what causes you stress, and what area would you like 
+                                to work on. This way, we can fully personalize your journal!
+                             </p>
+                         </div>
+                         <div class="step-img-wrapper">
+                            <img src="image/step1.jpg" alt="" class="step-img">
+                         </div>
+                          
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
